--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <a href="./DAY 3/DAY 3.html">DAY 3</a><br><br>
     <a href="./DAY 4/DAY 4.HTML">DAY 4</a><br><br>
    <a href="./DAY 6/DAY 6.html">DAY 6</a><br><br>
-   <a href="/DAY 7/DAY 7.html">DAY 7</a><br><br>
-   <a href="/DAY 8/signup.html">DAY 8</a><br><br>
+   <a href="./DAY 7/DAY 7.html">DAY 7</a><br><br>
+   <a href="./DAY 8/signup.html">DAY 8</a><br><br>
     
 </body>
 </html>
